# seventy-five-percent

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
game/: Card.cpp  Card.h  CardController.cpp  CardController.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Player.cpp  Player.h
game/menu/: FuncMenuOption.h  Menu.cpp  Menu.h  MenuOption.h  TextMenuOption.cpp  TextMenuOption.h
resources/: cards.json
utils/: Box.cpp  Box.h  Drawable.cpp  Drawable.h  Drawer.h  Printer.cpp  Printer.h
web/: index.html
web/css/: style.css  style.scss
